# synthla-edu-v2

./: .dockerignore  .gitignore  CHANGELOG.md  COMPLETE_PAPER_RESULTS.txt  CRITICAL_FIXES_APPLIED.md  DATA_SCHEMA.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  END_TO_END_TEST_REPORT.md  EXECUTION_VERIFIED.md  EXPERIMENT_VERIFICATION_REPORT.md  FIXES_APPLIED.md  GITHUB_QUICKSTART.md  GITHUB_README_ONEPAGE.md  GITHUB_READY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  LICENSE  Makefile  OBJECTIVES_VERIFICATION_MATRIX.md  PERFORMANCE_FIXES.md  PROJECT_COMPLETE.md  PUBLICATION_READY_VERIFICATION.md  Pipeline_Mermaid.md  QUICKREF.md  QUICKSTART.md  README.md  README_COMPREHENSIVE.md  README_MASTER.md  REPO_UPDATE_SUMMARY.md  REVIEWER_RESPONSE.md  SYNTHLA_EDU_V2_MANUSCRIPT.md  TABDDPM_FIX.md  TEST_SUCCESS_REPORT.md  USAGE.md  VISUALIZATION_IMPROVEMENTS.md  patch_torch_amp.py  pyproject.toml  pytest.ini  (+10 more)
.github/workflows/: ci.yaml  ci.yml  nightly_full.yaml
Manuscript/: Manuscript.docx  ~$nuscript.docx
configs/: full.yaml  minimal.yaml  quick.yaml
runs_audit/assistments/: results.json
runs_audit/oulad/: results.json
runs_publication/: seed_summary.json
runs_publication/seed_0/: experiment_log_20260215_210743.txt  experiment_log_20260215_215512.txt  (+1 more)
scripts/: generate_all_figures.py
tests/: README.md  conftest.py  test_data_loading.py  test_logging.py  test_overwrite_and_skip.py  test_pipeline.py  test_smoke_quick_config.py  test_stats.py  test_synthesizers.py
utils/: README.md  __init__.py  effect_size.py  logging_config.py  timing.py
(+30 files in other folders)
